# pytest-adoration

./: .gitignore  .pylintrc  README.md  conftest.py  db.py  dynamo.py  example_session.py  place.py  pyproject.toml  pytest.ini  requirements.txt  session.py  stage.py  tasks.py  util.py  zip.py  zippopotam_client.py
.github/workflows/: main.yml
src/: util.py
src/db/: dynamo.py  example_session.py  session.py  stage.py
src/testdata/: user.py  users.example.json
src/zippopotam/: place.py  zipcode.py  zippopotam_client.py
tests/: conftest.py  test_examples.py  test_markers.py  test_minimal.tavern.yaml  test_playwright.py  test_pydantic.py  test_user.py
