[tool.poetry]
name = "pytest-adoration"
version = "0.1.0"
description = ""
authors = ["Josh McVey <yersh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = {version = "^6.0.0-rc.1", allow-prereleases = true}
black = "^19.10b0"
flake8 = "^3.8.3"
pytest-xdist = "^1.33.0"
pytest-html = "^2.1.1"
invoke = "^1.4.1"
hypothesis = "^5.20.3"
requests = "^2.24.0"
psutil = "^5.7.2"
boto3 = "^1.14.26"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
