[tool.poetry]
name = "pytest-adoration"
version = "0.1.1"
description = ""
authors = ["Josh McVey <yersh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"
flake8 = "^3.8.3"
pytest-xdist = "^1.33.0"
pytest-html = "^2.1.1"
invoke = "^1.4.1"
hypothesis = "^5.20.3"
requests = "^2.24.0"
psutil = "^5.7.2"
boto3 = "^1.14.26"
black = "^20.8b1"
pact-python = "^1.3.0"
pylint = "^2.7.4"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}
playwright = "^1.11.1"
pytest-playwright = "^0.1.1"
Faker = "^8.2.0"
rich = "^10.2.2"
tavern = {extras = ["pytest"], version = "^1.14.2"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
